--- a/interface/package.json
+++ b/interface/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^3.1.0"
+    "vite": "^3.1.8"
   },
   "dependencies": {
-    "grapesjs": "^0.20.1"
+    "grapesjs": "^0.20.1",
+    "sanitize-html": "^2.7.2",
+    "sass": "^1.55.0"
   }
 }
